# qblog

./: .env.example  .gitignore  AGENTS.md  ANALYTICS_IMPLEMENTATION.md  BLOG_ENHANCEMENTS_SUMMARY.md  BLOG_ENHANCEMENT_GUIDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  ENHANCED_BLOG_FEATURES.md  IMAGE_CLEANUP.md  IMPLEMENTATION_SUMMARY.md  PUBLISH_LOGIC_FIX.md  Pipfile  QUICK_REFERENCE.md  README.md  RICH_SNIPPETS_COMPLETE.md  SECURITY.md  SEO_CHECKLIST.md  SEO_GUIDE.md  SEO_IMPLEMENTATION.md  SEO_PERSONAL_BRAND.md  SEO_README.md  SEO_SUMMARY.md  app.py  articles.py  database.py  example-enhanced-article.md  images.py  newUI.md  optimize_images.py  projects.py  pyproject.toml  requirements.txt  search.py  seo_helpers.py  settings.py  setup-blog-enhancements.sh  sitemap_generator.py  tailwind.config.js  test_redis.py  (+2 more)
.github/: blog-style.instructions.md  copilot-instructions.md  llm.md
.github/workflows/: ci.yml
articles/: Hawthorne Effect  Ruhiy To'siq (Mental Barrier)  programming-languages  resume
backend/my-blog-hono/: .env.local  INDEX.md  dev-server.ts  inspect-postgres-schema-simple.ts  inspect-postgres-schema.ts  inspect-postgres.ts  inspect-schema-clean.ts  migrate-postgres-to-sqlite.ts  package.json  swagger.json  tsconfig.json  wrangler.jsonc.bak  wrangler.toml
backend/my-blog-hono/src/: index.ts
backend/my-blog-hono/src/db/: articles.ts  projects.ts  schema.sql  schema.ts
backend/my-blog-hono/src/lib/: utils.ts
backend/my-blog-hono/src/middleware/: auth.ts
backend/my-blog-hono/src/routes/: articles.ts  auth.ts  projects.ts
docs/: search-mental-model.md
frontend/: package-lock.json
scripts/: optimize_images.py  reindex_articles_es.py
static/: article-styles.css  blog-style.css  blog-styles.css  footer.css  llms.txt  login.css  projects-styles.css  publish-styles.css  robots.txt  styles.css  tailwind.css
templates/: 404.html  500.html  _admin_nav.html  _bg.html  _footer.html  _nav.html  _theme.html  about.html  add_edit_project.html  admin_articles.html  admin_dashboard.html  admin_db_info.html  admin_homepage.html  admin_projects.html  analytics.html  article.html  base.html  blog.html  compare.html  delete.html  footer.html  for_llms.html  header.html  image_sitemap.xml  index.html  login.html  matrix.html  person_schema.html  projects.html  publish.html  publish_modern.html  seo_meta.html  series_navigation.html  sitemap.xml  talks.html
tests/: conftest.py  test_app.py
