[project]
name = "qblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "api-analytics>=1.2.7",
    "blinker==1.7.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "flask==3.0.2",
    "flask-sqlalchemy==3.1.1",
    "greenlet>=3.2.2",
    "itsdangerous==2.1.2",
    "jinja2==3.1.3",
    "markupsafe==2.1.5",
    "psycopg2-binary>=2.9.10",
    "python-dotenv==1.0.1",
    "python-slugify==8.0.4",
    "sqlalchemy==2.0.30",
    "text-unidecode==1.3",
    "typing-extensions==4.11.0",
    "werkzeug==3.0.1",
]
